--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,4 +2,5 @@
 <title>Instagram Show</title>
 
 <!-- CSS -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.2/cosmo/bootstra <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="css/style.css">
