Bug fix in index.ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 			<% elements.forEach(function(elem) { %>
 			<div class="instagram-pic col-sm-3">
 				<a href="<%= elem.link %>" target="_blank">
-					<img src="<%= elem.images.standard_resolution.url %>" class="img-rounded"/>
+					<img src="<%= elem.images.standard_resolution.url %>" class="img-responsive"/>
 				</a>
 
 				<div class="instagram-bar">
