--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand">
 				<span class="glyphicon glyphicon-picture"></span>
-				My Instagram Photos 
+				<%= name %>'s Instagram Photos 
 			</a>
 		</div> 
 	</div>
