--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,6 +10,10 @@
 		<% include ../partials/header %>
 	</header>
 
+	<section>
+		<% include ../partials/user %>
+	</section>
+
 	<main>
 		<div class="row">
 			<% elements.forEach(function(elem) { %>
